<resources>
    <string name="app_name">রিফ্লেকশন ফ্রম সূরা ইউসুফ</string>

    <!--    TODO: Google TEST application information ;-->
    <string name="AdsSetting" translatable="false">AdsSetting</string>
    <string name="application_ads_string" translatable="false">ca-app-pub-5980068077636654~6973124302</string>

    <string-array name="chapter_string_array">
        <item>ভূমিকা</item>
        <item>জেনারেল ওভারভিউ অব দ্যা সূরা</item>
        <item>ইউসুফ (আ.)-এর পরিচয়</item>
        <item>কী ঘটেছিল আল্লাহর নবি ইউসুফ (আ.)-এর জীবনে</item>
        <item>সূরার সূচনা কথা</item>
        <item>ইউসুফ (আ.)-এর শৈশবকাল</item>
        <item>ইউসুফ (আ.)-এর যৌবন</item>
        <item>জেলখানায় ইউসুফ (আ.)</item>
        <item>বাদশার স্বপ্ন দেখা</item>
        <item>প্রৌঢ় বয়সের কাহিনি</item>
        <item>ভাইদের দ্বিতীয়বার মিশর আগমন</item>
        <item>পরিবারের সাথে পুনর্মিলন</item>
        <item>উপসংহার</item>
        <item>লাইফ লেসন</item>
    </string-array>


    <!--  TODO: Menu Text  -->
    <string name="home">Home</string>
    <string name="writer_info">Writer Info</string>
    <string name="about_app">About app</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="update_app">Update App</string>
    <string name="other_application">Other Application</string>
    <string name="aber_vinno_app">এবার ভিন্ন কিছু হোক</string>
    <string name="ahobban">আহ্বান বই</string>
    <string name="other_apps">অন্যান্য অ্যাপ্স</string>
    <string name="communication">Communication</string>
    <string name="rate_app">Rate App</string>
    <string name="contact_us">Contact Us</string>
    <string name="website">Website</string>
    <string name="share">Share</string>
    <string name="social_account">Social Account</string>
    <string name="facebook_page">Facebook Page</string>
    <string name="facebook_group">Facebook Group</string>
    <string name="youtube">Youtube</string>
    <string name="linkedin">Linkedin</string>
    <string name="openNavigation">Open Navigation</string>
    <string name="closeNavigation">Close Navigation</string>
    <string name="group_join_demo_text">এই অ্যাপ্সের যেকোন সমস্যায় আমারদের গ্রপে জয়েন করুন, এবং একটি স্কিন শর্ট পোষ্ট করুন। তাছাড়াও আপনি গ্রপে বই থেকে আপনার ভালো লাগা অংশ আমাদের সাথে শিয়ার করতে পারবেন। আর আপনি যদি আগে জয়েন করে থাকেন তাহলে “আমি জয়েন করেছি!” বাটুনে ক্লিক করুন।\nসহযোগিতার জন্য ধন্যবাদ।</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>